# app/router/dataPenyuluh.js
@@ -9,13 +9,15 @@ const {
   tambahJurnalKegiatan,
   tambahPresensiKehadiran,
   daftarPenyuluh,
-  deleteDaftarPenyuluh
+  deleteDaftarPenyuluh,
+  presensiKehadiranWeb
 } = require('../controllers/dataPenyuluh');
 
 router.post('/penyuluh/add', upload.single('foto') ,tambahDataPenyuluh);
 router.post('/presensi-kehadiran/add',upload.single('FotoKegiatan'), tambahPresensiKehadiran);
 router.post('/jurnal-kegiatan/add',upload.single('gambar'), tambahJurnalKegiatan);
 router.get('/presensi-kehadiran', presensiKehadiran);
+router.get('/presensi-kehadiran/web', presensiKehadiranWeb);
 router.get('/jurnal-kegiatan', jurnalKegiatan);
 router.get('/riwayat-chat', RiwayatChat);
 router.get('/daftar-penyuluh', auth, daftarPenyuluh);
